# Adaxia

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  hugo.toml  main.cc  theme.toml
archetypes/: default.md
assets/css/: main.css
assets/js/: katex.min.js  main.js
layouts/_default/: baseof.html  home.html  list.html  single.html  taxonomy.html  term.html
layouts/_default/_markup/: render-codeblock.html  render-image.html  render-table.html
layouts/partials/: footer.html  head-math.html  head.html  header-control.html  header-icon.html  menu.html  terms.html
layouts/partials/head/: css.html  js.html
module/: CMakeLists.txt
module/Config/: config.cc  config.hpp
module/Log/: log.cc  log.hpp
